# plasma-mobile-wf

./: .gitmodules  CMakeLists.txt  wayfire.ini
android-service@hwcomposer.service.d/: 20-plasma-mobile-wf.conf
components/: CMakeLists.txt
components/mobileshellstate/: startupfeedbackmodel.cpp  startupfeedbackmodel.h
components/screenbrightnessplugin/: CMakeLists.txt  screenbrightnessutil.cpp  screenbrightnessutil.h
components/sessionlockplugin/: CMakeLists.txt  sessionlock.cpp  sessionlock.h
components/sessionlockplugin/qml/: HeaderComponent.qml  Keypad.qml  LockScreen.qml  LockScreenState.qml  Main.qml  NotificationsComponent.qml  PasswordBar.qml  qml.qrc
components/wallpaperimageplugin/: wallpaperplugin.cpp
components/wayfireipcplugin/: CMakeLists.txt  wayfireipc.cpp  wayfireipc.h
components/wlrdpmsplugin/: CMakeLists.txt  wlrdpms.cpp  wlrdpms.h
containments/homescreens/: CMakeLists.txt
debian/: changelog  control  copyright  gbp.conf  libsessionlockqtinterface6-dev.install  libsessionlockqtinterface6.install  plasma-mobile-tweaks.conffiles  plasma-mobile-tweaks.install  plasma-mobile-tweaks.udev  plasma-mobile-wf-config-hwcomposer.dirs  plasma-mobile-wf-config-hwcomposer.install  plasma-mobile-wf.install  plasma-mobile-wf.service  plasma-mobile-wf.user.target  plasma-mobile.install  plasma-mobile.lintian-overrides  plasma-mobile.service  qmldeps.overrides  rules  watch  zz-plasma-wf.sh
debian/patches/: 001_Revert_lockscreen_Refactor_and_lazy_load_notifications.patch  001_add_type_application_to_desktop_for_5.26_only.patch  series
debian/upstream/: metadata  signing-key.asc
envmanager/: config.h
initialstart/: main.cpp
plasma-mobile-wf.service.d/: 40-droid-wait.conf  50-chvt.conf
po/az/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/ca/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/ca@valencia/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/cs/: kcm_mobileshell.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/de/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/en_GB/: kcm_mobileshell.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_org.kde.plasma.quicksetting.airplanemode.po  plasma_org.kde.plasma.quicksetting.audio.po  plasma_org.kde.plasma.quicksetting.battery.po  plasma_org.kde.plasma.quicksetting.bluetooth.po  plasma_org.kde.plasma.quicksetting.caffeine.po  plasma_org.kde.plasma.quicksetting.donotdisturb.po  plasma_org.kde.plasma.quicksetting.flashlight.po  plasma_org.kde.plasma.quicksetting.keyboardtoggle.po  plasma_org.kde.plasma.quicksetting.mobiledata.po  plasma_org.kde.plasma.quicksetting.nightcolor.po  plasma_org.kde.plasma.quicksetting.powermenu.po  plasma_org.kde.plasma.quicksetting.screenrotation.po  plasma_org.kde.plasma.quicksetting.settingsapp.po  plasma_org.kde.plasma.quicksetting.wifi.po  plasma_shell_org.kde.plasma.phone.po
po/es/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/eu/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/fi/: plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
po/fr/: kcm_mobileshell.po  plasma_applet_org.kde.phone.homescreen.po  plasma_applet_org.kde.phone.homescreen.simple.po  plasma_shell_org.kde.plasma.phone.po
quicksettings/: CMakeLists.txt
sessionlock/: CMakeLists.txt  main.cpp  sessionlock.cpp  sessionlock.h
sessionlock/qml/: LockScreen.qml  LockScreenState.qml
(+69 files in other folders)
